Add the ability to register attendance

--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -9,3 +9,13 @@ layout: default
 {% include events/event-info.html event=event %}
 
 {{ content }}
+
+<hr/>
+
+<a href="mailto:hello@eatup.diet?subject=EATup {{ event.title }}&amp;body=I'd like to attend EATup" class="cta-button spaced-less">Let us know you're coming!</a>
+
+<p>
+    <small>
+        (We'll normally book tables and finish organising the week before)
+    </small>
+</p>
