--- a/_includes/site/footer.html
+++ b/_includes/site/footer.html
@@ -1,5 +1,5 @@
 
 <small>
     Copyright &copy; {{site.time | date: '%Y'}};
-    This site is <a href="https://github.com/thefeds/meatup">hosted on GitHub</a>
+    This site is <a href="https://github.com/thefeds/eatup">hosted on GitHub</a>
 </small>
