--- a/_includes/site/header.html
+++ b/_includes/site/header.html
@@ -1,8 +1,8 @@
 
 {% assign events = site.events | reverse %}
 
-<nav>
-    <ul>
+<nav class="spaced">
+    <ul class="clean-list inline-list button-list">
         <li>
             <a href="/">Home</a>
         </li>
