--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,11 +25,11 @@
 
     <div class="page">
 
-        <div role="banner">
+        <div role="banner" class="spaced-more">
             {% include site/header.html %}
         </div>
 
-        <div role="main">
+        <div role="main" class="spaced-more">
             {{ content }}
         </div>
 
