--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -4,7 +4,7 @@ layout: default
 
 {% assign event=page %}
 
-<h1>{{ event.title }}</h1>
+<h1>EATup: {{ event.title }}</h1>
 
 {% include events/event-info.html event=event %}
 
